--- a/index.css
+++ b/index.css
@@ -139,6 +139,12 @@ body {
         display: block;
         z-index: 1001;
     }
+    body.no-scroll {
+        overflow: hidden;
+        height: 100%;
+        position: fixed;
+        width: 100%;
+    }
 
     .navbar {
         flex-direction: row;
