--- a/index.css
+++ b/index.css
@@ -201,6 +201,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: -50px;
 }
 
 .background-container {
