--- a/services.css
+++ b/services.css
@@ -24,6 +24,7 @@ header {
 }
 .blue {
     color: blue;
+    margin-right: 10px;
 }    
 .brand-name{
     display: flex;
@@ -39,7 +40,7 @@ header {
 .logo {
     font-size: 24px;
     font-weight: bold;
-    margin-left: 80px;
+    margin-left:20px;
 }
 h1 {
     text-align: center;
