--- a/index.css
+++ b/index.css
@@ -224,16 +224,26 @@ header {
     z-index: 1;
 }
 
+.fallback-image {
+    display: none;
+}
+
 /* Media Queries for smaller screens */
 @media (max-width: 768px) {
     #background-video {
-        width: 100vw;
-        height: auto;
-        min-height: 100%;
+        display: none;
+    }
+
+    .fallback-image {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
     }
 }
-
 
 .table-container {
     background-color: rgba(255, 255, 255, 0.8); /* Fond blanc avec opacité */
